styles.css
/* ... */
.footer-section {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  margin-bottom: 6.55rem;
}
.footer-left {
  display: flex;
  align-items: center;
  column-gap: 4rem;
}
.column-1 img {
  margin-bottom: 2.5rem;
}
.column-1 p {
  font-size: 0.9rem;
  font-weight: 400;
  line-height: 1.875rem;
}
.column-2 {
  display: flex;
  flex-direction: column;
  line-height: 1.875rem;
}
.column-2 h1 {
  text-transform: uppercase;
  font-size: 1rem;
  margin-bottom: 0.2rem;
}
.column-2 a {
  text-decoration: none;
  font-size: 0.9rem;
  font-weight: 400;
  line-height: 1.875rem;
  color: #ffffff;
}
.column-3 {
  display: flex;
  flex-direction: column;
}
.column-3 a {
  text-decoration: none;
  color: #ffffff;
  text-transform: uppercase;
  font-size: 0.9rem;
  line-height: 1.875rem;
  font-weight: 400;
}
.app-logos {
  display: flex;
  align-items: center;
  column-gap: 0.625rem;
}
.footer-right {
  display: flex;
  justify-content: left;
  flex-direction: column;
  row-gap: 2.6rem;
}
.footer-right h1 {
  font-size: 1.125rem;
  text-transform: capitalize;
  margin-bottom: 1rem;
  font-weight: 700;
}
.footer-form div {
  display: flex;
  column-gap: 0;
  align-items: center;
  height: 3.5rem;
}
.footer-form input {
  background: #ffffff;
  border: none;
  font-size: 0.825rem;
  text-transform: capitalize;
  margin-right: 0;
  padding: 1.5rem 7.375rem 1.5em 1.875rem;
  outline: none;
  max-height: 100%;
}
.footer-form button {
  text-transform: uppercase;
  font-size: 0.825rem;
  font-weight: 700;
  background: #7fad39;
  border: none;
  color: #ffffff;
  cursor: pointer;
  height: 100%;
  padding-right: 2rem;
  padding-left: 2rem;
  transition: all 300ms linear;
}

.payment a {
  margin-right: 0.625rem;
}
.footer-bottom h3 {
  font-size: 0.825rem;
  font-weight: 600;
}
/* 
==============
Small Screen 
==============
*/
@media screen and (max-width: 480px) {
  .center {
    max-width: 90vw;
    margin: 0 auto;
  }
  /* 
=============
Top
=============
*/
  .shipping {
    display: none;
  }
  .top .center {
    justify-content: space-between;
  }
  .top-mail {
    border-right: none;
  }

  /* 
=============
Logo
=============
*/
  .logo-center {
    position: relative;
  }
  .location {
    display: none;
  }
  .logo-left {
    flex-direction: column;
    row-gap: 1rem;
    align-items: flex-start;
  }
  .logo-right {
    flex-direction: column;
    align-items: flex-start;
    position: absolute;
    top: 0;
    right: 0;
  }
  .search {
    padding: 0.68rem auto 0.75rem 0.81rem;
  }
  .search input {
    width: 100%;
  }
  .phone-number {
    display: none;
  }
  .logo-like {
    display: none;
  }
  .profile {
    border-left: none;
    padding-left: 0;
    padding-top: 0.3rem;
  }
  /* 
=============
Navbar
=============
*/
  .categories {
    display: none;
  }
  .navbar-center {
    padding-top: 1rem;
    padding-bottom: 1rem;
  }
  .nav-list {
    display: grid;
    grid-template-columns: 1fr 1fr;
    column-gap: 0;
    row-gap: 0.3rem;
  }

  /* 
=============
Hero Cards
=============
*/

  .single-card {
    width: 100%;
    border: none;
  }
  .single-card img {
    height: 100%;
    object-fit: cover;
  }
  .section-title {
    margin-top: 3.5rem;
    margin-bottom: 2rem;
  }

  /* 
==============
Category Cards
==============
*/
  .c-cards {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    max-width: 100%;
  }

  .third-card {
    position: relative;
  }
  .third-card button {
    display: block;
  }
  .fourth-card button {
    display: block;
  }

  .c-cards a {
    width: 100%;
  }
  /*
==============
Top Products
==============
*/
  .top-product-cards {
    justify-content: center;
    column-gap: 5rem;
    overflow: hidden;
  }
  .top-product-cards .right-btn {
    right: 1rem;
  }
  .top-product-cards .left-btn {
    left: 1rem;
  }
  /* 
==============
Values
==============
*/
  .value-cards {
    justify-content: center;
    overflow: hidden;
    margin-bottom: 2rem;
  }
  .value-card {
    width: 100%;
  }
  /* 
==============
Cashback
==============
*/
  .cashback {
    padding-right: 1rem;
    padding-left: 1rem;
  }
  /* 
==============
Footer
==============
*/
  .new-products {
    margin-bottom: 5rem;
  }
  .footer {
    padding-top: 2.5rem;
    padding-bottom: 2.5rem;
  }
  .footer-section {
    flex-direction: column;
    row-gap: 3rem;
  }
  .column-1 {
    padding-top: 0.5rem;
  }
  .column-1 img {
    margin-bottom: 0.6rem;
  }
  .column-3 {
    display: none;
  }
  .footer-left {
    align-items: flex-start;
    justify-content: space-between;
    column-gap: 1rem;
  }
  .footer-right {
    max-width: 100%;
  }
  .app-logos {
    flex-direction: column;
    align-items: flex-start;
  }
  .footer-form div {
    height: 2.5rem;
  }
  .footer-form input {
    padding: 1rem 2rem 1rem 1rem;
  }
  .footer-form button {
    padding-right: 1rem;
    padding-left: 1rem;
  }
  .footer-section {
    padding-bottom: 3rem;
  }
}

